--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -60,17 +60,17 @@ h4 {
 }
 
 #homeBtn1 {
-  border: 2px solid blueviolet;
-  background-color: blueviolet;
+  border: 2px solid rgb(226, 18, 18);
+  background-color: rgb(226, 18, 18);
 }
 
 #homeBtn2 {
-  border: 1px solid blueviolet;
+  border: 1px solid rgb(226, 18, 18);
   border-radius: 5px;
 }
 
 #homeBtn2:hover {
-  background-color: blueviolet;
+  background-color: rgb(226, 18, 18);
   color: white;
   transition: 0.5s;
 }
