--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,13 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.homePageMain{
+/* .homePageMain{
   background: url('https://i.ibb.co/5hqQfjr/Vector-21.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position-x:right;
   height: 100vh;
-}
+} */
 
 
 @media  (max-width:1165px){
