--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Poppins;
 }
 /* .homePageMain{
   background: url('https://i.ibb.co/5hqQfjr/Vector-21.png');
@@ -11,10 +17,12 @@ p {
   height: 100vh;
 } */
 
+.btn-danger {
+  background-color: red !important;
+}
 
-@media  (max-width:1165px){
-    .homePageMain{
-      background:white !important;
-
-    }
+@media (max-width: 1165px) {
+  .homePageMain {
+    background: white !important;
+  }
 }
