Made Changes in Footer

--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,8 +1,9 @@
+
 .featureHead {
   color: red;
   font-weight: bold;
 }
 
 #featurePage {
-  background-color: rgb(250, 246, 246) !important;
+  background-color: #EAEAEA !important;
 }
