--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,10 +2,17 @@
   list-style-type: none;
   color: black;
 }
+#Footer{
+  background-color: #C6C6C6;
+}
 
 .bg-danger {
   background-color: red !important;
   color: white;
+}
+
+.footDiv{
+  width: 90%;
 }
 #numInput {
   padding: 10px;
@@ -27,10 +34,19 @@
   text-align: center;
   justify-content: center;
 }
+
+.footLinkList{
+  list-style-type: none;
+  line-height: 40px;
+}
 #phoneCode {
   background-color: transparent;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.205);
   padding: 10px;
+}
+
+.footLine{
+  border-top: 1px solid rgba(0, 0, 0, 0.384);
 }
