--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 h1,
 h2,
@@ -7,7 +8,11 @@ h4,
 h5,
 h6,
 p {
-  font-family: Poppins;
+  font-family: Poppins
+}
+
+body{
+  overflow-x: hidden;
 }
 /* .homePageMain{
   background: url('https://i.ibb.co/5hqQfjr/Vector-21.png');
